Falcon-Updated Documentation

--- a/html files/other-info/blog.html
+++ b/html files/other-info/blog.html
@@ -3,48 +3,61 @@
 <head></head>
 
 <body>
-    <h1>Blog</h1>
-    <hr>
-    <div class="testimonials-container">
-        <img src="resources/img/blogs/download (3).jpg" alt="Avatar" style="width:30%; border-radius: 0px;"><span><b>Networking</b></span>
-        <p style="font-size: 12px;">Posted on April 17, 2019</p>
-        <p>Networking is the practice of linking two or more computing devices together for the purpose of sharing data.A network, is a collection of computers and other hardware components interconnected by communication channels that allow sharing of resources
-            and information.</p>
-        <a href="#">Read more>></a>
-    </div>
-    <div class="testimonials-container">
-        <img src="resources/img/blogs/download (1).jpg" alt="Avatar" style="width:30%; border-radius: 0px;"><span><b>Hardwork Vs Smart work</b></span>
-        <p style="font-size: 12px;">Posted on November 11, 2019</p>
-        <p>Hard work means putting in a lot of time and effort doing a certain amount of work. Whereas, smart work means spending less amount of time performing the same amount of work. Hard work aims at the quantity and may become monotonous and boring
-            after a certain period. Smart work aims at achieving goals with quality.</p>
-        <a href="#">Read more>></a>
-    </div>
-    <div class="testimonials-container">
-        <img src="resources/img/blogs/download (2).jpg" alt="Avatar" style="width:30%; border-radius: 0px;"><span><b>Logical Thinking</b></span>
-        <p style="font-size: 12px;">Posted on January 20, 2020</p>
-        <p>Logical thinking is the process in which one uses reasoning consistently to come to a conclusion. Problems or situations that involve logical thinking call for structure, for relationships between facts, and for chains of reasoning that “make
-            sense.”
+
+    <div class="textarea" id="subject" name="subject" style="height:200px">
+        <div class="blogimg">
+
+            <!-- OVERLAY EFFECT WITH TEXT -->
+            <div id="overlay" onclick="off()">
+                <div id="text"> <img class="overlayimg" src="resources/img/other-info/AI.jpg">
+
+                </div>
+            </div>
+
+            <button onclick="on()"> <img src="resources/img/other-info/AI.jpg"></button>
+        </div>
+        <h2 style="text-align: center;float:inherit">Artificial Intelligence</h2>
+        <p style="margin-left: 32%;">Of all the cutting-edge technologies today, Artificial Intelligence is arguably the most important one, given its wide range of potential and prominence. However, AI too has been a victim of some myths and misconceptions which usually surround
+            anything that is popular. Here’s an infographic to debunk the most common myths about AI. <a href="../Falcon/html files/other-info/Gcontent.html"><b>Read More</b></a>
+
         </p>
-        <a href="#">Read more>></a>
+
     </div>
-    <hr>
-    <h2>Contact Form</h2>
-    <hr>
-    <div class="blog-container">
-        <form action="/action_page.php">
-            <label for="fname">FirstName</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <div class="textarea" id="subject" name="subject" style="height:200px">
+        <div class="blogimg">
+            <!-- OVERLAY EFFECT WITH TEXT -->
+            <div id="overlay" onclick="off()">
+                <div id="text"> <img class="overlayimg" src="resources/img/other-info/healthcare.jpg">
 
-            <label for="lname">LastName</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                </div>
+            </div>
+            <button onclick="on()"> <img src="resources/img/other-info/healthcare.jpg"></button>
+        </div>
+        <h2 style="text-align: center;">Health Care</h2>
+        <p>Immersive Reality has been a great addition to the development of technology over the past decade. Not only in the entertainment industry, but AR and VR have been reverberating their presence across many industries. According to a report, Healthcare
+            will be spending around $5bn on AR and VR by 2025. Scientists all around the world have been innovating methods
+            <a href="../Falcon/html files/other-info/Gcontent.html"><b>Read More</b></a></p>
 
-
-            <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px;width: 100%;"></textarea>
-
-            <input type="submit" value="Submit">
-        </form>
     </div>
+    <div class="textarea" id="subject" name="subject" style="height:200px">
+        <div class="blogimg">
+            <!-- OVERLAY EFFECT WITH TEXT -->
+            <div id="overlay" onclick="off()">
+                <div id="text"> <img class="overlayimg" src="resources/img/other-info/blockchain.jpg">
+
+                </div>
+            </div>
+            <button onclick="on()"> <img src="resources/img/other-info/blockchain.jpg"></button>
+        </div>
+        <h2 style="text-align: center;">Block Chain</h2>
+        <p>
+            By now, this may be the 100th time you are hearing the word ‘Blockchain’ within a week. There are scores of organisations which are trying to build Proof-Of-Concepts (POC) across diverse domains. But among all these, still there are questions being raised
+            on the scalability of Blockchain technologies.
+            <a href="#"><b>Read More</b></a></p>
+
+    </div>
+
+
 </body>
 
 </html>
