--- a/html files/ui-services guide/checkboxclass.html
+++ b/html files/ui-services guide/checkboxclass.html
@@ -64,7 +64,7 @@
             <li><b>Returns:</b></li>
             <p>This method returns true if checked or false if not.</p>
             <li><b>Uses : </b></li>
-            <p><img src="resources/img/services guides/checkboxclass/Picture2.png"></p>
+            <p><img src="resources/img/services guides/checkboxclass/Picture2.png" class="imgshrink"></p>
         </div>
         <div id="clickCheckBoxByCssSelector"><br>
             <h3>3. Public boolean clickCheckBoxByCssSelector(LocatorType locator,String elementCssSelector,SelectType selectType)</h3>
@@ -86,7 +86,7 @@
                 <p>This method returns true for if clicked and false for if not.</p>
 
                 <li><b>Uses:</b></li>
-                <p><img src="resources/img/services guides/checkboxclass/Picture3.png"></p>
+                <p><img src="resources/img/services guides/checkboxclass/Picture3.png" class="imgshrink"></p>
             </ul>
         </div>
         <div id="isCheckBoxSelectedById"><br>
@@ -109,7 +109,7 @@
                 <p>This method returns true if checked otherwise returns false.</p>
 
                 <li><b>Uses:</b></li>
-                <p><img src="resources/img/services guides/checkboxclass/Picture4.png"></p>
+                <p><img src="resources/img/services guides/checkboxclass/Picture4.png" class="imgshrink"></p>
             </ul>
         </div>
         <div id="selectCheckBoxByValue"><br>
@@ -136,7 +136,7 @@
                 <b>
                     <li> Uses:
                 </b></li>
-                <p><img src="resources/img/services guides/checkboxclass/Picture5.png"></p>
+                <p><img src="resources/img/services guides/checkboxclass/Picture5.png" class="imgshrink"></p>
             </ul>
         </div>
         <div id="isCheckBoxSelectByValue"><br>
@@ -162,7 +162,7 @@
             <li>
                 <b>Uses:</b>
             </li>
-            <p><img src="resources/img/services guides/checkboxclass/Picture6.png"></p>
+            <p><img src="resources/img/services guides/checkboxclass/Picture6.png" class="imgshrink"></p>
             </ul>
         </div>
         <div id="isCheckBoxSelectByCssSelector"><br>
@@ -185,7 +185,7 @@
                 <p>noSuchElementException</p>
 
                 <li><b>Uses:</b></li>
-                <p><img src="resources/img/services guides/checkboxclass/Picture7.png"></p>
+                <p><img src="resources/img/services guides/checkboxclass/Picture7.png" class="imgshrink"></p>
             </ul>
 
         </div>
