--- a/html files/ui-services guide/clickclass.html
+++ b/html files/ui-services guide/clickclass.html
@@ -95,7 +95,7 @@
                     <p>NoSuchElementException</p>
 
                     <li><b> Uses:</b></li>
-                    <p><img src="resources/img/services guides/clickclass/Picture3.png"></p>
+                    <p><img src="resources/img/services guides/clickclass/Picture3.png" class="imgshrink"></p>
                 </ul>
             </div>
             <div id="doubleclickbyid"><br>
@@ -120,7 +120,7 @@
                     <p>NoSuchElementException</p>
 
                     <li><b>Uses:</b></li>
-                    <p><img src="resources/img/services guides/clickclass/Picture4.png"></p>
+                    <p><img src="resources/img/services guides/clickclass/Picture4.png" class="imgshrink"></p>
                 </ul>
             </div>
             <div id="performclick"><br>
@@ -228,7 +228,7 @@
                     <p>NoSuchElementException</p>
 
                     <li><b>Uses:</b></li>
-                    <p><img src="resources/img/services guides/clickclass/Picture6.png"></p>
+                    <p><img src="resources/img/services guides/clickclass/Picture6.png" class="imgshrink"></p>
                 </ul>
             </div>
             <div id="actionclick"><br>
