--- a/html files/ui-services guide/webtableclass.html
+++ b/html files/ui-services guide/webtableclass.html
@@ -64,7 +64,7 @@
                 <p>It returns list of data included in column.</p>
 
                 <li><b>Uses:</b></li>
-                <p><img src="resources/img/services guides/webtable/Picture2.png"></p>
+                <p><img src="resources/img/services guides/webtable/Picture2.png" class="imgshrink"></p>
             </ul>
         </div>
         <div id="dataFromRow"><br>
