--- a/documentation.html
+++ b/documentation.html
@@ -2,10 +2,13 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" language='javascript' src="../Project-Falcon/resources/js files/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="resources/css/documentation.css">
     <link rel="icon" type="image/x icon" href="resources/img/atmecs logo.jpg">
     <title>Falcon-Documentation</title>
@@ -18,8 +21,7 @@
     <div id="fixed-header">
         <div class="navbar">
             <img src="resources/img/cropped-logo2.png" class="logo">
-            <a onclick="document.getElementById('id01').style.display='block'" style="width:auto; cursor: pointer;">Sign Up</a>
-
+            <a onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</a>
             <a href="#contactUs">Contact us</a>
             <a href="#service">Services</a>
 
@@ -39,71 +41,36 @@
     <!-- <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
     </div> -->
+
     <!--Breadcrumbs-->
     <div class="breadcrumbs-section">
         <div class="fixed-breadcrumb">
             <ul class="breadcrumb">
-                <h2>FALCON-DOCUMENTATION</h2>
+
+                <h2>DOCUMENTATION</h2>
                 <li><a href="new/homepage.html">Home</a></li>
                 <li><a href="documentation.html">Resources</a></li>
-                <li><a href="documentation.html">Falcon-Documentation</a>&emsp;</li>
+                <li><a href="documentation.html">Documentation</a>&emsp;</li>
             </ul>
 
         </div>
 
     </div>
 
-    <!--SIGN UP IMPLEMENTATION STARTS HERE-->
 
-    <div id="id01" class="modal-page">
-        <span onclick="document.getElementById('id01').style.display='none'" class="closeButton" title="Close Form">&times;</span>
-        <form class="modal-form" action="/action_page.php">
-            <div class="form-container">
-                <h1>Sign Up</h1>
-                <p>Please fill in this form to create an account.</p>
-                <hr>
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required>
-
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
-
-                <label for="psw-repeat"><b>Repeat Password</b></label>
-                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-                <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
-
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-                <div class="clearfix">
-                    <button type="submit" class="signupbtn">Sign up</button>
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <!--SIGN UP IMPLEMENTATION ENDS HERE-->
-
-    <!--LEFT SIDE VERTICAL NAVIGATION STARTS HERE-->
+    <!--Left Side Vertical Navigation-->
 
     <!--ACCORDION 1---UI Project Setup-->
 
     <div id="sidebar-left">
-        <!-- <button style="margin-top: 2%; margin-left: 10px; font-size:20px;">Free Trial</button> -->
         <div class="tab scroll" id="tabActive">
-
-
-
             <button class=" accordion btn" onclick="openTab(event, 'projectSetup')" id="defaultOpen">UI Project
                 Setup</button>
-
             <div class="panel">
                 <button class="btn" onclick="openTab(event, 'framework')">UI Framework</button>
                 <button class="btn" onclick="openTab(event, 'requirement')">Environment Requirements</button>
                 <button class="btn" onclick="openTab(event, 'setup')">SetUp UI Project</button>
+
             </div>
 
             <!--ACCORDION 2---UI Project Structure-->
@@ -116,12 +83,11 @@
                 <button class="btn" onclick="openTab(event, 'configproperty')">Understanding
                     config.properties</button>
                 <button class="btn" onclick="openTab(event, 'script')">Creating and Running Test Scripts</button>
+
             </div>
 
             <!--ACCORDION 3---UI Services Guide-->
-
             <button class=" accordion btn" onclick="openTab(event, 'service-guide')">UI Service Guide</button>
-
             <div class="panel">
                 <button class="btn" onclick="openTab(event, 'browser-class')">Browser Class</button>
                 <button class="btn" onclick="openTab(event, 'checkbox')">CheckBox Class</button>
@@ -144,50 +110,82 @@
                 <button class="btn" onclick="openTab(event, 'waitelement')">Wait Element Class</button>
                 <button class="btn" onclick="openTab(event, 'webtable')">Web Table Class</button>
                 <button class="btn" onclick="openTab(event, 'windowhandler')">Window Handler Impl Class</button>
+
             </div>
 
             <!--ACCORDION 4--OTHER INFO-->
-
             <button class=" accordion btn" onclick="openTab(event, 'other-info')">Other Info</button>
 
             <div class=" panel ">
                 <button class="btn" onclick="openTab(event, 'faq')">FAQ's</button>
                 <button class="btn" onclick="openTab(event, 'glossary')">Glossary</button>
                 <button class="btn" onclick="openTab(event, 'featuresvideos')">Features Videos</button>
-                <button class="btn" onclick="openTab(event, 'newsletter')">Newsletter</button>
-                <button class="btn" onclick="openTab(event, 'feedback')">Feedback</button>
-                <button class="btn" onclick="openTab(event, 'blog')">Blog</button>
-                <button class="btn" onclick="openTab(event, 'imgGrid')">Image Grid</button>
-                <button class="btn" onclick="openTab(event, 'tabImage')">Tab Gallery</button>
-                <button class="btn" onclick="openTab(event, 'pricing')">Pricing Details</button>
+                <button class="btn" onclick="openTab(event, 'newsletter')">NewsLetter</button>
+                <button class="btn" onclick="openTab(event,'feedback')">Feedback</button>
+                <button class="btn" onclick="openTab(event,'blogPost')">Blog</button>
+
+
 
             </div>
         </div>
     </div>
 
-    <!--LEFT SIDE VERTICAL NAVIGATION ENDS HERE-->
-    <!--MAIN DIV STARTS HERE-->
+    <!-- SIGN IN AND SIGN UP IMPLEMENTATION -->
+    <div id="id01" class="modal">
+        <span onclick="document.getElementById('id01').style.display='none'" class="closeButton" title="Close Modal">&times;</span>
+        <form class="modal-content" action="/action_page.php">
+            <div class="form-container">
+                <h1>Sign Up</h1>
+                <p>Please fill in this form to create an account.</p>
+                <hr>
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Enter Email" name="email" required>
 
+                <label for="psw"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="psw" required>
+
+                <label for="psw-repeat"><b>Repeat Password</b></label>
+                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+                <label>
+                    <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+                </label>
+
+                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+                <div class="clearfix">
+                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+                    <button type="submit" class="signupbtn">Sign Up</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+
+
+
+    <!--Main Index--UI Project Structure -->
+    <!-- <div id="main-bar">
+
+    </div> -->
     <div id="main">
-
-        <!--MAIN TAB CONTENT (FROM EXTERNAL FILES) INTEGRATION STARTS HERE-->
-
-        <!--Download button starts here-->
-
-        <a href="../FalconDocument.zip" id="download" class="downloadLink" title="Download File" onclick="alertBox()" style="border-radius: 100px; margin-left: 93%;"><i class="fa fa-download" style="margin-top:3%;"></i></a>
-
-
-        <!--Download button ends here-->
 
         <div class="container">
 
+
             <!--Scroll to top buton -->
-            <button onclick="topFunction()" id="topBtn" title="Go to top">&#8679;</button>
+            <button onclick="topFunction()" id="myBtn" title="Go to top">&#708;</button>
+            <a href="../Falcon/FalconDocument.zip" onclick="alert ()" class="downloadLink" title="Download PDF"><i class="fa fa-download"></i></a>
+
+
+
 
             <!--HTML content files integration-->
 
             <!--UI PROJECT STRUCTURE-->
             <div id="projectSetup" class="tabcontent">
+
                 <div class="banner" title="html files/ui-project setup/uiprojectsetup.html"></div>
             </div>
 
@@ -364,36 +362,25 @@
                 <div id="webinars" class="tabcontent">
                     <div class="banner" title="html files/other-info/featuresvideos.html"></div>
                 </div>
+
                 <!--Newsletter-->
                 <div id="newsletter" class="tabcontent">
                     <div class="banner" title="html files/other-info/newsletter.html"></div>
                 </div>
-                <!--Feedback-->
+
+                <!--Feedback Survey-->
                 <div id="feedback" class="tabcontent">
                     <div class="banner" title="html files/other-info/feedback.html"></div>
                 </div>
-                <!--Blogs-->
-                <div id="blog" class="tabcontent">
+
+                <!--BlogPost-->
+                <div id="blogPost" class="tabcontent">
                     <div class="banner" title="html files/other-info/blog.html"></div>
                 </div>
 
-                <!--Image Grid-->
-                <div id="imgGrid" class="tabcontent">
-                    <div class="banner" title="html files/other-info/imageGrid.html"></div>
-                </div>
-
-                <!--Tab Image -->
-                <div id="tabImage" class="tabcontent">
-                    <div class="banner" title="html files/other-info/tabGallery.html"></div>
-                </div>
-
-                <!--Pricing Details -->
-                <div id="pricing" class="tabcontent">
-                    <div class="banner" title="html files/other-info/pricing.html"></div>
-                </div>
 
             </div>
-            <!--MAIN TAB CONTENT (FROM EXTERNAL FILES) INTEGRATION ENDS HERE-->
+
 
             <!--TO DISPLAY IMAGES AFTER ZOOM STARTS HERE-->
             <div id="myModal" class="modal">
@@ -405,11 +392,9 @@
 
         </div>
     </div>
-    <!--MAIN DIV STARTS HERE-->
 
-    <!--iNTEGRATION OF EXTERNAL JAVASCRIPT FILE TO READ THE JS STARTS HERE-->
+    <!--To read JS file-->
     <script type="text/javascript" src="script.js"></script>
-    <!--iNTEGRATION OF EXTERNAL JAVASCRIPT FILE TO READ THE JS STARTS HERE-->
 
 </body>
 
