--- a/html files/other-info/glossary.html
+++ b/html files/other-info/glossary.html
@@ -6,52 +6,51 @@
     <div class="full-content">
         <h1>Glossary</h1>
         <hr>
-        <div class="align-btn" style="text-align: center;">
-            <button><a href="#A">A</a></button>
-            <button><a href="#B">B</a></button>
-            <button><a href="#C">C</a></button>
-            <button><a href="#D">D</a></button>
-            <button><a href="#E">E</a></button>
-            <button><a href="#F">F</a></button>
-            <button><a href="#G">G</a></button>
-            <button><a href="#H">H</a></button>
-            <button><a href="#I">I</a></button>
-            <button><a href="#J">J</a></button>
-            <button><a href="#K">K</a></button>
-            <button><a href="#L">L</a></button>
-            <button><a href="#M">M</a></button>
-            <button><a href="#N">N</a></button>
-            <button><a href="#O">O</a></button>
-            <button><a href="#P">P</a></button>
-            <button><a href="#Q">Q</a></button>
-            <button><a href="#R">R</a></button>
-            <button><a href="#S">S</a></button>
-            <button><a href="#T">T</a></button>
-            <button><a href="#U">U</a></button>
-            <button><a href="#V">V</a></button>
-            <button><a href="#W">W</a></button>
-            <button><a href="#X">X</a></button>
-            <button><a href="#Y">Y</a></button>
-            <button><a href="#Z">Z</a></button>
+        <div class="glossary">
 
+            <a href="#a"><button>A</button></a>
+            <a href="#b"> <button>B</button></a>
+            <a href="#c"> <button>C</button></a>
+            <a href="#d"> <button>D</button></a>
+            <a href="#e"> <button>E</button></a>
+            <a href="#f"> <button>F</button></a>
+            <a href="#g"> <button>G</button></a>
+            <a href="#h"> <button>H</button></a>
+            <a href="#i"> <button>I</button></a>
+            <a href="#j"> <button>J</button></a>
+            <a href="#k"> <button>K</button></a>
+            <a href="#l"> <button>L</button></a>
+            <a href="#m"> <button>M</button></a>
+            <a href="#n"> <button>N</button></a>
+            <a href="#o"> <button>O</button></a>
+            <a href="#p"> <button>P</button></a>
+            <a href="#q"> <button>Q</button></a>
+            <a href="#r"> <button>R</button></a>
+            <a href="#s"> <button>S</button></a>
+            <a href="#t"> <button>T</button></a>
+            <a href="#u"> <button>U</button></a>
+            <a href="#v"> <button>V</button></a>
+            <a href="#w"> <button>W</button></a>
+            <a href="#x"> <button>X</button></a>
+            <a href="#y"> <button>Y</button></a>
+            <a href="#z"> <button>Z</button></a>
         </div>
 
-        <div id="A"><br>
+
+        <div id="a"><br>
             <p><b><i>A</i></b></p>
             <p><b>Actual Result:</b> The system status or behaviour after you conduct a test. An anomaly or deviation is when your actual results differ from the expected results.</p>
             <p><b>Ad hoc Testing:</b> Testing carried out informally without test cases or other written test instructions.
             </p>
         </div>
-        <hr>
-        <div id="B"><br>
+        <div id="b"><br>
             <p><b><i>B</i></b></p>
             <p><b>Blackbox Testing:</b> Testing in which the test object is seen as a “black box” and the tester has no knowledge of its internal structure. The opposite of white box testing.</p>
             <p><b>Bug:</b> A slang term for fault, defect, or error. Originally used to describe actual insects causing malfunctions in mechanical devices that predate computers. The International Software Testing Qualifications Board (ISTQB) glossary explains
                 that “a human being can make an error (mistake), which produces a defect (fault, bug) in the program code, or in a document. If a defect in code is executed, the system may fail to do what it should do (or do something it shouldn’t), causing
                 a failure. Defects in software, systems or documents may result in failures, but not all defects do so.” See also debugging.</p>
         </div>
-        <hr>
-        <div id="C"><br>
+        <div id="c"><br>
             <p><b><i>C</i></b></p>
             <p><b>Code Standard:</b> Description of how a programming language should be used within an organization. See also naming standard.</p>
             <p><b>Configuration Testing:</b> A test to confirm that the system works under different configurations of hardware and software, such as testing a website using different browsers.</p>
@@ -59,30 +58,30 @@
                 given situation.
             </p>
         </div>
-        <div id="D"><br>
+        <div id="d"><br>
             <p><b><i>D</i></b></p>
             <p><b>Debugging:</b> The process in which developers identify, diagnose, and fix errors found. See also bug and defect.</p>
             <p><b>Dynamic Testing:</b> Testing performed while the system is running. Execution of test cases is one example.
             </p>
         </div>
-        <div id="E"><br>
+        <div id="e"><br>
             <p><b><i>E</i></b></p>
             <p><b>End-to-End:</b> Testing used to test whether the performance of an application from start to finish conforms with the behaviour that is expected from it. This technique can be used to identify system dependencies and confirm the integrity
                 of data transfer across different system components remains.
             </p>
             <p><b>Expected Result:</b> A description of the test object’s expected status or behaviour after the test steps are completed. Part of the test case.</p>
         </div>
-        <div id="F"><br>
+        <div id="f"><br>
             <p><b><i>F</i></b></p>
             <p><b>Failure:</b> Deviation of the component or system under test from its expected result.</p>
             <p><b>Functional Testing:</b> Testing of the system’s functionality and behaviour; the opposite of non-functional testing.</p>
         </div>
-        <div id="G"><br>
+        <div id="g"><br>
             <p><b><i>G</i></b></p>
             <p><b>Gray-box-Testing:</b> Testing which uses a combination of white box and black box testing techniques to carry out software debugging on a system whose code the tester has limited knowledge of.
             </p>
         </div>
-        <div id="I"><br>
+        <div id="i"><br>
             <p><b><i>I</i></b></p>
 
             <p><b>IEEE 829:</b> An international standard for test documentation published by the IEEE organization. The full name of the standard is IEEE Standard for Software Test Documentation. It includes templates for the test plan, various test reports,
@@ -92,29 +91,29 @@
             <p><b>Iteration:</b> A development cycle consisting of a number of phases, from formulation of requirements to delivery of part of an IT system. Common phases are analysis, design, development, and testing. The practice of working in iterations
                 is called iterative development.</p>
         </div>
-        <div id="L"><br>
+        <div id="l"><br>
             <p><b><i>L</i></b></p>
             <p><b>Load Testing:</b> A type of performance testing conducted to evaluate the behaviour of a component or system with increasing load, e.g. numbers of concurrent users and/or numbers of transactions. Used to determine what load can be handled
                 by the component or system. See also performance testing and stress testing.</p>
         </div>
-        <div id="M"><br>
+        <div id="m"><br>
             <p> <b><i>M</i></b></p>
             <p><b>Maintenance:</b> Activities for managing a system after it has been released in order to correct defects or to improve or add functionality. Maintenance activities include requirements management, testing, development amongst others.</p>
             <p><b>MTBF:</b> Mean time between failures. The average time between failures of a system.</p>
         </div>
-        <div id="N"><br>
+        <div id="n"><br>
             <p><b><i>N</i></b></p>
             <p><b>Negative Testing:</b> A type of testing intended to show that the system works well even if it is not used correctly. For example, if a user enters text in a numeric field, the system should not crash.
             </p>
             <p><b>Non-Functional Testing:</b> Testing of non-functional aspects of the system, such as usability, reliability, maintainability, and performance.</p>
         </div>
-        <div id="O"><br>
+        <div id="o"><br>
             <p><b><i>O</i></b></p>
             <p><b>Operational Testing:</b> Tests carried out when the system has been installed in the operational environment (or simulated operational environment) and is otherwise ready to go live. Intended to test operational aspects of the system, e.g.
                 recoverability, co-existence with other systems and resource consumption.</p>
             <p><b>Outcome:</b> The result after a test case has been executed.</p>
         </div>
-        <div id="P"><br>
+        <div id="p"><br>
             <p><b><i>P</i></b></p>
             <p><b>Pair Testing:</b>Test approach where two persons, e.g. two testers, a developer and a tester, or an end-user and a tester, work together to find defects. Typically, they share one computer and trade control of it while testing. One tester
                 can act as observer when the other performs tests. Test approach where two persons, e.g. two testers, a developer and a tester, or an end-user and a tester, work together to find defects. Typically, they share one computer and trade control
@@ -123,7 +122,7 @@
             <p><b>Positive Testing:</b> A test aimed to show that the test object works correctly in normal situations. For example, a test to show that the process of registering a new customer functions correctly when using valid test data.</p>
             <p<b>Priority:</b> The level of importance assigned to e.g. a defect.</p>
         </div>
-        <div id="Q"><br>
+        <div id="q"><br>
             <p><b><i>Q</i></b></p>
             <p><b>Quality Assurance(QA):</b> Systematic monitoring and evaluation of various aspects of a component or system to maximize the probability that minimum standards of quality are being attained.
             </p>
