--- a/html files/other-info/newsletter.html
+++ b/html files/other-info/newsletter.html
@@ -1,28 +1,23 @@
-<!DOCTYPE html>
 <html>
 
+<head></head>
+<form>
+    <div class="newslettercontainer">
+        <h2>Subscribe to our Newsletter</h2>
+        <p>Falcon Documentation</p>
+    </div>
+
+    <div class="newslettercontainer" style="background-color:white">
+        <input type="text" placeholder="Name" name="name" required>
+        <input type="text" placeholder="Email address" name="mail" required>
+        <label>
+        <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+      </label>
+    </div>
+
+    <div class="newslettercontainer">
+        <input type="submit" value="Subscribe">
+    </div>
+</form>
+
 <body>
-
-
-
-    <form action="/action_page.php">
-        <div class="newsletter-container">
-            <h2>Subscribe to our Newsletter</h2>
-        </div>
-
-        <div class="newsletter-container" style="background-color:white">
-            <input type="text" placeholder="Name" name="name" required>
-            <input type="text" placeholder="Email address" name="mail" required>
-            <label>
-      <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
-    </label>
-        </div>
-
-        <div class="newsletter-container">
-            <input type="submit" value="Subscribe">
-        </div>
-    </form>
-
-</body>
-
-</html>
