--- a/html files/other-info/otherinfo.html
+++ b/html files/other-info/otherinfo.html
@@ -8,19 +8,16 @@
     <p><b>Other information about the product:</b></p>
     <ul>
         <li><b>Frequently asked Questions(FAQ's)</b></li>
-        &nbsp;<br><a href="../other-info/faq.html" target="_blank">FAQ's</a><br> &nbsp;
+        &nbsp;<br><a href="../other-info/faq.html" target="_blank">FAQ's</a><br>
+        &nbsp;
         <li><b>Glossary</b></li>
         <p>Contains testing related terms and its definition.</p>
-        &nbsp;<a href="../other-info/glossary.html" target="_blank">Glossary</a><br> &nbsp;
+        &nbsp;<a href="../other-info/glossary.html" target="_blank">Glossary</a><br>
+        &nbsp;
         <li><b>Features videos</b></li>
         <p>Stay tuned for the updates!</p>
+
     </ul>
-    <div class="short-line">
-        &emsp;
-        <hr>&emsp;
-    </div>
-    &emsp;
-    </div>
 </body>
 
 </html>
