--- a/html files/ui-project structure/uiprojectstructure.html
+++ b/html files/ui-project structure/uiprojectstructure.html
@@ -5,11 +5,14 @@
 <body>
     <h2>UI Project Structure</h2>
     <hr>
-    <p>As a project manager structure is everything… there should be no such thing as a project without structure. A project organization is a <b>structure</b> that facilitates the coordination and implementation of<b> project activities</b>. Its main reason
-        is to create an environment that fosters interactions among the team members with a minimum amount of disruptions, overlaps and conflict.
-    </p>
+    <p>As a project manager structure is everything… there should be no such thing as a project without
+        structure. A project organization is a <b>structure</b> that facilitates the coordination and
+        implementation of<b> project activities</b>. Its main reason is to create an environment that
+        fosters interactions among the team members with a minimum amount of disruptions, overlaps and
+        conflict.</p>
     <p> <b>WHAT IS STRUCTURE?</b><br>
-        <p> Structure in projects can be considered in two main forms: Planning & Approach. Planning is concerned with the “What”, “Who” and the “When”.</p>
+        <p> Structure in projects can be considered in two main forms: Planning & Approach. Planning is concerned with
+            the “What”, “Who” and the “When”.</p>
 
     </p>
     <ul><b>
@@ -24,13 +27,6 @@
         <li>Creating and Running Test</li>
     </ul>
     </div>
-    <div class="short-line">
-        &emsp;
-        <hr>&emsp;
-    </div>
-    &emsp;
-    </div>
-
 </body>
 
 </html>
