--- a/html files/ui-services guide/browserclass.html
+++ b/html files/ui-services guide/browserclass.html
@@ -20,14 +20,14 @@
             <li><a href="#getCurrentPageTitle">public String getCurrentPageTitle()</a></li>
             <li><a href="#getCurrentURL">public String getCurrentURL()</a>
                 <li><a href="#getDriver">WebDriver getDriver()</a></li>
-
-                <!--Read more button-->
-                <span id="dots"><b style="color: black;">...</b></span>
-                <span id="more">
-
                 <li><a href="#getFindFromBrowser">public Find getFindFromBrowser()</a></li>
                 <li><a href="#getKey">public key getKey()</a></li>
                 <li><a href="#getLoadedPageSource">public String getLoadedPageSource()</a></li>
+
+                <span id="dots"><b style="color: black;">...</b></span>
+
+                <span id="more">
+
                 <li><a href="#getMouse">public mouseMove getMouse()</a><br></li>
                 <li><a href="#getNavigate">public Navigate getNavigate()</a></li>
                 <li><a href="#getPageHelper">public pageHelper getPageHelper()</a></li>
@@ -328,7 +328,7 @@
                     <li><b>Returns: </b></li>
                     <p>Returns waitElement object</p>
                     <li><b>Usage:</b></li>
-                    <p><img src="resources/img/services guides/browserclass/Picture18.png"></p>
+                    <p><img src="resources/img/services guides/browserclass/Picture18.png" class="imgshrink"></p>
                 </ul>
             </div>
             <div id="getWindowHandler"><br>
